--- a/views/users/about.ejs
+++ b/views/users/about.ejs
@@ -1,20 +1,17 @@
 <%- include('../layout/header.ejs') %>
-<%- include('../layout/navbarejs') %>
-
-
+<%- include('../layout/navbar.ejs') %>
 
 <main class="main">
     <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
                 <li class="breadcrumb-item active" aria-current="page">About us</li>
             </ol>
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
     <div class="container">
-        <div class="page-header page-header-big text-center" style="background-image: url('assets/images/about-header-bg.jpg')">
+        <div class="page-header page-header-big text-center" style="background-image: url('assets/images/aboutpage.jpg')">
             <h1 class="page-title text-white">About us<span class="text-white">Who we are</span></h1>
         </div><!-- End .page-header -->
     </div><!-- End .container -->
@@ -22,239 +19,48 @@
     <div class="page-content pb-0">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mb-3 mb-lg-0">
-                    <h2 class="title">Our Vision</h2><!-- End .title -->
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. </p>
+                <div class="col-lg-6 mb-lg-0">
+                    <h2 class="title">Welcome To <span style="color: rgb(215, 142, 6);">FurniHub</span></h2><!-- End .title -->
+                    <p>At <span style="color: rgb(215, 142, 6);">FurniHub</span>, we believe in a world where self-expression knows no bounds. Our vision goes beyond furniture; we aspire to be your global destination for personal expression and home fashion. <span style="color:rgb(215, 142, 6);">FurniHub</span> is more than just a furniture store; it's a lifestyle hub that empowers individuals to embrace their unique style with unwavering confidence.. </p>
+
+                    <div class="pt-6">
+                        <h2 class="title">Our Vision</h2><!-- End .title -->
+                        <p>In the realm of furniture and home decor,<span style="color: rgb(215, 142, 6);">FurniHub</span>  is dedicated to inspiring and uplifting your living spaces. We envision a future where every home tells a unique story, transcending trends and celebrating individuality. Our commitment is to curate a diverse range of high-quality furniture pieces that not only meet your functional needs but also serve as a canvas for your personal narrative. </p>
+                    </div>
+                    
                 </div><!-- End .col-lg-6 -->
-                
+
                 <div class="col-lg-6">
-                    <h2 class="title">Our Mission</h2><!-- End .title -->
-                    <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. <br>Praesent elementum hendrerit tortor. Sed semper lorem at felis. </p>
+                    <h2 class="title">Why <span style="color: rgb(215, 142, 6);">FurniHub</span>?</h2><!-- End .title -->
+                    <ul>
+                        <li>Distinctive Collections: Explore our carefully curated collections designed to cater to diverse tastes and preferences.</li>
+                        <li>Timeless Elegance: Our furniture transcends fleeting trends, ensuring that your space remains a testament to enduring style.</li>
+                        <li>Unparalleled Quality: Every piece at FurniHub is crafted with precision and quality materials, promising longevity and resilience.</li>
+                        <li>Your Style, Your Way: We're not just a furniture store; we're your partners in self-expression. FurniHub is your canvas to design a home that reflects the essence of you.</li>
+                    </ul>
+                    <p class="pt-5">
+                        Join us on this journey to redefine home fashion. Let FurniHub be the catalyst for transforming your living spaces into an embodiment of your unique style and personality.
+                    </p>
                 </div><!-- End .col-lg-6 -->
+
+                
             </div><!-- End .row -->
 
             <div class="mb-5"></div><!-- End .mb-4 -->
         </div><!-- End .container -->
-
-        <div class="bg-light-2 pt-6 pb-5 mb-6 mb-lg-8">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 mb-3 mb-lg-0">
-                        <h2 class="title">Who We Are</h2><!-- End .title -->
-                        <p class="lead text-primary mb-3">Pellentesque odio nisi, euismod pharetra a ultricies <br>in diam. Sed arcu. Cras consequat</p><!-- End .lead text-primary -->
-                        <p class="mb-2">Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Suspendisse potenti. Sed egestas, ante et vulputate volutpat, uctus metus libero eu augue. </p>
-
-                        <a href="blog.html" class="btn btn-sm btn-minwidth btn-outline-primary-2">
-                            <span>VIEW OUR NEWS</span>
-                            <i class="icon-long-arrow-right"></i>
-                        </a>
-                    </div><!-- End .col-lg-5 -->
-
-                    <div class="col-lg-6 offset-lg-1">
-                        <div class="about-images">
-                            <img src="assets/images/about/img-1.jpg" alt="" class="about-img-front">
-                            <img src="assets/images/about/img-2.jpg" alt="" class="about-img-back">
-                        </div><!-- End .about-images -->
-                    </div><!-- End .col-lg-6 -->
-                </div><!-- End .row -->
-            </div><!-- End .container -->
-        </div><!-- End .bg-light-2 pt-6 pb-6 -->
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="brands-text">
-                        <h2 class="title">The world's premium design brands in one destination.</h2><!-- End .title -->
-                        <p>Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nis</p>
-                    </div><!-- End .brands-text -->
-                </div><!-- End .col-lg-5 -->
-                <div class="col-lg-7">
-                    <div class="brands-display">
-                        <div class="row justify-content-center">
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/1.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/2.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/3.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/4.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/5.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/6.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/7.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/8.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-
-                            <div class="col-6 col-sm-4">
-                                <a href="#" class="brand">
-                                    <img src="assets/images/brands/9.png" alt="Brand Name">
-                                </a>
-                            </div><!-- End .col-sm-4 -->
-                        </div><!-- End .row -->
-                    </div><!-- End .brands-display -->
-                </div><!-- End .col-lg-7 -->
-            </div><!-- End .row -->
-
-            <hr class="mt-4 mb-6">
-
-            <h2 class="title text-center mb-4">Meet Our Team</h2><!-- End .title text-center mb-2 -->
-
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="member member-anim text-center">
-                        <figure class="member-media">
-                            <img src="assets/images/team/member-1.jpg" alt="member photo">
-
-                            <figcaption class="member-overlay">
-                                <div class="member-overlay-content">
-                                    <h3 class="member-title">Samanta Grey<span>Founder & CEO</span></h3><!-- End .member-title -->
-                                    <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p> 
-                                    <div class="social-icons social-icons-simple">
-                                        <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                        <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                        <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                    </div><!-- End .soial-icons -->
-                                </div><!-- End .member-overlay-content -->
-                            </figcaption><!-- End .member-overlay -->
-                        </figure><!-- End .member-media -->
-                        <div class="member-content">
-                            <h3 class="member-title">Samanta Grey<span>Founder & CEO</span></h3><!-- End .member-title -->
-                        </div><!-- End .member-content -->
-                    </div><!-- End .member -->
-                </div><!-- End .col-md-4 -->
-
-                <div class="col-md-4">
-                    <div class="member member-anim text-center">
-                        <figure class="member-media">
-                            <img src="assets/images/team/member-2.jpg" alt="member photo">
-
-                            <figcaption class="member-overlay">
-                                <div class="member-overlay-content">
-                                    <h3 class="member-title">Bruce Sutton<span>Sales & Marketing Manager</span></h3><!-- End .member-title -->
-                                    <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p> 
-                                    <div class="social-icons social-icons-simple">
-                                        <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                        <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                        <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                    </div><!-- End .soial-icons -->
-                                </div><!-- End .member-overlay-content -->
-                            </figcaption><!-- End .member-overlay -->
-                        </figure><!-- End .member-media -->
-                        <div class="member-content">
-                            <h3 class="member-title">Bruce Sutton<span>Sales & Marketing Manager</span></h3><!-- End .member-title -->
-                        </div><!-- End .member-content -->
-                    </div><!-- End .member -->
-                </div><!-- End .col-md-4 -->
-
-                <div class="col-md-4">
-                    <div class="member member-anim text-center">
-                        <figure class="member-media">
-                            <img src="assets/images/team/member-3.jpg" alt="member photo">
-
-                            <figcaption class="member-overlay">
-                                <div class="member-overlay-content">
-                                    <h3 class="member-title">Janet Joy<span>Product Manager</span></h3><!-- End .member-title -->
-                                    <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p> 
-                                    <div class="social-icons social-icons-simple">
-                                        <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                        <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                        <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                    </div><!-- End .soial-icons -->
-                                </div><!-- End .member-overlay-content -->
-                            </figcaption><!-- End .member-overlay -->
-                        </figure><!-- End .member-media -->
-                        <div class="member-content">
-                            <h3 class="member-title">Janet Joy<span>Product Manager</span></h3><!-- End .member-title -->
-                        </div><!-- End .member-content -->
-                    </div><!-- End .member -->
-                </div><!-- End .col-md-4 -->
-            </div><!-- End .row -->
-        </div><!-- End .container -->
-
-        <div class="mb-2"></div><!-- End .mb-2 -->
-
-        <div class="about-testimonials bg-light-2 pt-6 pb-6">
-            <div class="container">
-                <h2 class="title text-center mb-3">What Customer Say About Us</h2><!-- End .title text-center -->
-
-                <div class="owl-carousel owl-simple owl-testimonials-photo" data-toggle="owl" 
-                    data-owl-options='{
-                        "nav": false, 
-                        "dots": true,
-                        "margin": 20,
-                        "loop": false,
-                        "responsive": {
-                            "1200": {
-                                "nav": true
-                            }
-                        }
-                    }'>
-                    <blockquote class="testimonial text-center">
-                        <img src="assets/images/testimonials/user-1.jpg" alt="user">
-                        <p>“ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque aliquet nibh nec urna. <br>In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. ”</p>
-                        <cite>
-                            Jenson Gregory
-                            <span>Customer</span>
-                        </cite>
-                    </blockquote><!-- End .testimonial -->
-
-                    <blockquote class="testimonial text-center">
-                        <img src="assets/images/testimonials/user-2.jpg" alt="user">
-                        <p>“ Impedit, ratione sequi, sunt incidunt magnam et. Delectus obcaecati optio eius error libero perferendis nesciunt atque dolores magni recusandae! Doloremque quidem error eum quis similique doloribus natus qui ut ipsum.Velit quos ipsa exercitationem, vel unde obcaecati impedit eveniet non. ”</p>
-
-                        <cite>
-                            Victoria Ventura
-                            <span>Customer</span>
-                        </cite>
-                    </blockquote><!-- End .testimonial -->
-                </div><!-- End .testimonials-slider owl-carousel -->
-            </div><!-- End .container -->
-        </div><!-- End .bg-light-2 pt-5 pb-6 -->
     </div><!-- End .page-content -->
 </main><!-- End .main -->
+
+<div class="mb-6 text-center mt-6" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+    <h3>Your space, your style,<span style="color: rgb(215, 142, 6);">FurniHub</span>. </h3>
+</div>
+
 
 <%- include('../layout/allfooter.ejs') %>
 </div><!-- End .page-wrapper -->
 <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
 
 <%- include('../layout/mobile.ejs') %>
-
- 
-
 
 <!-- Plugins JS File -->
 <script src="assets/js/jquery.min.js"></script>
@@ -266,4 +72,4 @@
 <!-- Main JS File -->
 <script src="assets/js/main.js"></script>
 
-<%- include('../layout/footer.ejs) %>
+<%- include('../layout/footer.ejs') %>
