--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -1,6 +1,5 @@
 <%- include('../layout/header.ejs') %>
-<%- include('../layout/navbarejs') %>
-
+<%- include('../layout/navbar.ejs') %>
 
 <main class="main">
     <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
@@ -12,8 +11,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Shop</a></li>
-                <li class="breadcrumb-item active" aria-current="page">All Products</li>
+                <li class="breadcrumb-item active" aria-current="page">Shop</li>
             </ol>
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
@@ -40,49 +38,7 @@
                                     </select>
                                 </div>
                             </div><!-- End .toolbox-sort -->
-                            <div class="toolbox-layout">
-                                <a href="category-list.html" class="btn-layout">
-                                    <svg width="16" height="10">
-                                        <rect x="0" y="0" width="4" height="4" />
-                                        <rect x="6" y="0" width="10" height="4" />
-                                        <rect x="0" y="6" width="4" height="4" />
-                                        <rect x="6" y="6" width="10" height="4" />
-                                    </svg>
-                                </a>
-
-                                <a href="category-2cols.html" class="btn-layout">
-                                    <svg width="10" height="10">
-                                        <rect x="0" y="0" width="4" height="4" />
-                                        <rect x="6" y="0" width="4" height="4" />
-                                        <rect x="0" y="6" width="4" height="4" />
-                                        <rect x="6" y="6" width="4" height="4" />
-                                    </svg>
-                                </a>
-
-                                <a href="category.html" class="btn-layout active">
-                                    <svg width="16" height="10">
-                                        <rect x="0" y="0" width="4" height="4" />
-                                        <rect x="6" y="0" width="4" height="4" />
-                                        <rect x="12" y="0" width="4" height="4" />
-                                        <rect x="0" y="6" width="4" height="4" />
-                                        <rect x="6" y="6" width="4" height="4" />
-                                        <rect x="12" y="6" width="4" height="4" />
-                                    </svg>
-                                </a>
-
-                                <a href="category-4cols.html" class="btn-layout">
-                                    <svg width="22" height="10">
-                                        <rect x="0" y="0" width="4" height="4" />
-                                        <rect x="6" y="0" width="4" height="4" />
-                                        <rect x="12" y="0" width="4" height="4" />
-                                        <rect x="18" y="0" width="4" height="4" />
-                                        <rect x="0" y="6" width="4" height="4" />
-                                        <rect x="6" y="6" width="4" height="4" />
-                                        <rect x="12" y="6" width="4" height="4" />
-                                        <rect x="18" y="6" width="4" height="4" />
-                                    </svg>
-                                </a>
-                            </div><!-- End .toolbox-layout -->
+                           
                         </div><!-- End .toolbox-right -->
                     </div><!-- End .toolbox -->
 
@@ -578,12 +534,12 @@
                             </div><!-- End .collapse -->
                         </div><!-- End .widget -->
 
-                        <div class="widget widget-collapsible">
+                        <!-- <div class="widget widget-collapsible">
                             <h3 class="widget-title">
                                 <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
                                     Size
                                 </a>
-                            </h3><!-- End .widget-title -->
+                            </h3> End .widget-title 
 
                             <div class="collapse show" id="widget-2">
                                 <div class="widget-body">
@@ -592,56 +548,56 @@
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="size-1">
                                                 <label class="custom-control-label" for="size-1">XS</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div> End .custom-checkbox 
+                                        </div> End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="size-2">
                                                 <label class="custom-control-label" for="size-2">S</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div> End .custom-checkbox
+                                        </div> End .filter-item 
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" checked id="size-3">
                                                 <label class="custom-control-label" for="size-3">M</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div> End .custom-checkbox 
+                                        </div>End .filter-item 
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" checked id="size-4">
                                                 <label class="custom-control-label" for="size-4">L</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div> End .custom-checkbox 
+                                        </div> End .filter-item 
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="size-5">
                                                 <label class="custom-control-label" for="size-5">XL</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div> End .custom-checkbox 
+                                        </div> End .filter-item 
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="size-6">
                                                 <label class="custom-control-label" for="size-6">XXL</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
-                                    </div><!-- End .filter-items -->
-                                </div><!-- End .widget-body -->
-                            </div><!-- End .collapse -->
-                        </div><!-- End .widget -->
+                                            </div> End .custom-checkbox 
+                                        </div> End .filter-item 
+                                    </div>End .filter-items 
+                                </div> End .widget-body 
+                            </div> End .collapse 
+                        </div>End .widget -->
 
-                        <div class="widget widget-collapsible">
+                        <!-- <div class="widget widget-collapsible">
                             <h3 class="widget-title">
                                 <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
                                     Colour
                                 </a>
-                            </h3><!-- End .widget-title -->
+                            </h3> End .widget-title 
 
-                            <div class="collapse show" id="widget-3">
+                             <div class="collapse show" id="widget-3">
                                 <div class="widget-body">
                                     <div class="filter-colors">
                                         <a href="#" style="background: #b87145;"><span class="sr-only">Color Name</span></a>
@@ -652,17 +608,17 @@
                                         <a href="#" style="background: #669933;"><span class="sr-only">Color Name</span></a>
                                         <a href="#" style="background: #f2719c;"><span class="sr-only">Color Name</span></a>
                                         <a href="#" style="background: #ebebeb;"><span class="sr-only">Color Name</span></a>
-                                    </div><!-- End .filter-colors -->
-                                </div><!-- End .widget-body -->
-                            </div><!-- End .collapse -->
-                        </div><!-- End .widget -->
+                                    </div> End .filter-colors 
+                                </div> End .widget-body 
+                            </div>End .collapse
+                        </div>End .widget -->
 
-                        <div class="widget widget-collapsible">
+                        <!-- <div class="widget widget-collapsible">
                             <h3 class="widget-title">
                                 <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
                                     Brand
                                 </a>
-                            </h3><!-- End .widget-title -->
+                            </h3>End .widget-title
 
                             <div class="collapse show" id="widget-4">
                                 <div class="widget-body">
@@ -671,55 +627,55 @@
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-1">
                                                 <label class="custom-control-label" for="brand-1">Next</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-2">
                                                 <label class="custom-control-label" for="brand-2">River Island</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-3">
                                                 <label class="custom-control-label" for="brand-3">Geox</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-4">
                                                 <label class="custom-control-label" for="brand-4">New Balance</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-5">
                                                 <label class="custom-control-label" for="brand-5">UGG</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-6">
                                                 <label class="custom-control-label" for="brand-6">F&F</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
                                         <div class="filter-item">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="brand-7">
                                                 <label class="custom-control-label" for="brand-7">Nike</label>
-                                            </div><!-- End .custom-checkbox -->
-                                        </div><!-- End .filter-item -->
+                                            </div>End .custom-checkbox
+                                        </div>End .filter-item
 
-                                    </div><!-- End .filter-items -->
-                                </div><!-- End .widget-body -->
-                            </div><!-- End .collapse -->
-                        </div><!-- End .widget -->
+                                    </div>End .filter-items
+                                </div>End .widget-body
+                            </div>End .collapse
+                        </div>End .widget -->
 
                         <div class="widget widget-collapsible">
                             <h3 class="widget-title">
@@ -734,9 +690,9 @@
                                         <div class="filter-price-text">
                                             Price Range:
                                             <span id="filter-price-range"></span>
-                                        </div><!-- End .filter-price-text -->
+                                         </div> <!--End .filter-price-text -->
 
-                                        <div id="price-slider"></div><!-- End #price-slider -->
+                                        <!-- <div id="price-slider"></div>End #price-slider -->
                                     </div><!-- End .filter-price -->
                                 </div><!-- End .widget-body -->
                             </div><!-- End .collapse -->
@@ -749,21 +705,25 @@
 </main><!-- End .main -->
 
 <%- include('../layout/allfooter.ejs') %>
-
+</div><!-- End .page-wrapper -->
 <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
+
 
 <%- include('../layout/mobile.ejs') %>
 
+ <!-- Plugins JS File -->
+ <script src="assets/js/jquery.min.js"></script>
+ <script src="assets/js/bootstrap.bundle.min.js"></script>
+ <script src="assets/js/jquery.hoverIntent.min.js"></script>
+ <script src="assets/js/jquery.waypoints.min.js"></script>
+ <script src="assets/js/superfish.min.js"></script>
+ <script src="assets/js/owl.carousel.min.js"></script>
+ <script src="assets/js/wNumb.js"></script>
+ <script src="assets/js/bootstrap-input-spinner.js"></script>
+ <script src="assets/js/jquery.magnific-popup.min.js"></script>
+ <script src="assets/js/nouislider.min.js"></script>
+ <!-- Main JS File -->
+ <script src="assets/js/main.js"></script>
 
 
-<!-- Plugins JS File -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/jquery.hoverIntent.min.js"></script>
-<script src="assets/js/jquery.waypoints.min.js"></script>
-<script src="assets/js/superfish.min.js"></script>
-<script src="assets/js/owl.carousel.min.js"></script>
-<!-- Main JS File -->
-<script src="assets/js/main.js"></script>
-
-<%- include('../layout/footer.ejs) %>
+<%- include('../layout/footer.ejs') %>
