--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -21,7 +21,7 @@
                             <ul>
                                 <li><a href="tel:#"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
                                 <li><a href="wishlist.html"><i class="icon-heart-o"></i>My Wishlist</a></li>
-                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="/about">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                                 <li><a href="/login"><i class="icon-user"></i>Login</a></li>
                             </ul>
@@ -60,7 +60,7 @@
                                 <ul>
                                     <li><a href="/login">Login</a></li>
                                     <li>
-                                        <a href="about.html" >About</a>
+                                        <a href="/about" >About</a>
                                     </li>
                                     <li>
                                         <a href="contact.html" >Contact</a>
@@ -241,7 +241,7 @@
                                         <p class="text-center">or sign in with</p>
                                         <div class="row justify-content-center"> <!-- Use justify-content-center to center the content -->
                                             <div class="col-sm-6">
-                                                <a href="#" class="btn btn-login btn-g">
+                                                <a href="/auth/google" class="btn btn-login btn-g">
                                                     <i class="icon-google"></i>
                                                     Login With Google
                                                 </a>
